# ridecast

./: .clang-format  .clang-tidy  .gitignore  .gitmessage.txt  .gitmodules  CMakeLists.txt  CONTIBUTING.md  LICENSE  README.md  Tasks.md  build.py
Document/: API_List.xlsx
app/conn_mgnr/: conn_mgnr.c
app/demo/: demo_nal_sync_tls.c  demo_nal_tcp_tls.h
app/demo/nal/: demo_nal_async_tcp.c  demo_nal_tcp_tls.h
app/demo/uart/: demo_app_uart_async.c  demo_app_uart_sync.c
app/demo/wifi/: demo_wifi_sta_ap.c
app/demo_config/: app_bsp_config.c  app_bsp_config.h
app/main/: CMakeLists.txt  app_main.c
app/main_app/: ridecast_app.c
app/wifi_sta_app/: wifi_sta_app.c  wifi_sta_app.h
bsp/: CMakeLists.txt
bsp/include/: bsp_err_sts.h  bsp_log.h  bsp_uart.h  bsp_wifi copy.h.old  bsp_wifi.h  cli_logger.h  cli_logger.h.old
bsp/port/esp32/: bsp_uart.c  bsp_wifi copy.c.old  bsp_wifi.c
bsp/srcs/: bsp_err_sts.c  bsp_log.c  cli_logger.c  err_status.c
bsp/system/cli_logger/: cli_logger.c
bsp/uart/: bsp_uart.h
bsp/wifi/: bsp_wifi.h
cmake/: external.cmake.old  generate_version.cmake
docs/: Readme.md  RideCast_Connection_Manager.docx  flow_diagram.drawio
docs/esp/: ESP32 Wroom DevKit Board Pin Connection.html
docs/esp/ESP32 Wroom DevKit Board Pin Connection_files/: base.css  cart-drawer.js.download  cart-notification.js.download  cart.js.download  chunk.common_Daul8nwZ.esm.js.download  client.init-shop-cart-sync_BdyHc3Nr.en.esm.js.download  collapsible-content.css  component-accordion.css  component-article-card.css  component-card.css  component-cart-drawer.css  component-cart-items.css  component-cart-notification.css  component-cart.css  component-deferred-media.css  component-image-with-text.css  component-list-payment.css  component-list-social.css  component-loading-overlay.css  component-localization-form.css  component-menu-drawer.css  component-model-viewer-ui.css  component-newsletter.css  component-pickup-availability.css  component-predictive-search.css  component-price.css  component-product-model.css  component-rating.css  component-search.css  component-slider.css  component-slideshow.css  component-totals.css  details-disclosure.js.download  details-modal.js.download  f.txt  global.js.download  localization-form.js.download  media-gallery.js.download  pickup-availability.js.download  predictive-search.js.download  (+19 more)
docs/html/: architecture_diagram.html  data_flow_diagram.html  flow_diagram_02.html
main/: CMakeLists.txt  app_main.c
nal/: CMakeLists.txt  README.md
nal/include/: nal.h  nal_core.h  nal_crypto.h  nal_internal.h  nal_log.h  nal_network.h  nal_platform.h  nal_tls.h
nal/port/: nal_platform_esp32.c
nal/srcs/: nal_core.c  nal_crypto.c  nal_network.c  nal_netwrok.c  nal_tls.c
platform/bsp/common_io/uart/: uart_bsp.h
platform/system/error_status/inc/: err_status.h
system/: CMakeLists.txt  bsp_config.h  err_status.h  nal_config.h  sys_config.h
system/cli_logger/: New Text Document.txt
system/config/: bsp_config.h
system/error_status/inc/: bsp_err.h
system/include/: bsp_config.h  err_status.h  nal_config.h  sys_config.h
utilities/: tcp_server.py
vendors/: README.md
